k8s-yaml/custom-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-nginx-deployment-${TARGET_COLOR}
spec:
  selector:
    matchLabels:
      app: custom-nginx
      env: ${TARGET_COLOR}
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      labels:
        app: custom-nginx
        env: ${TARGET_COLOR}
    spec:
      containers:
      - name: custom-nginx
        image: registry-1.docker.io/anjoysutrisna/custom-nginx:${TARGET_VERSION}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 1Gi
#cat blue-green/deployment.yaml | TARGET_COLOR=green TARGET_VERSION=1.0.0 envsubst | kubectl apply -f -
